getting stats for each player

--- a/cricket.ipynb
+++ b/cricket.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getPlayerStats(innings):\n",
+    "    \n",
+    "    # Store player stats in dictionary, now indexed by team and player\n",
+    "    player_stats = {}\n",
+    "    \n",
+    "    for inning in innings:\n",
+    "        team = inning.get('team')\n",
+    "        overs = inning.get('overs', [])\n",
+    "        \n",
+    "        for over in overs:\n",
+    "            over_number = over.get('over')\n",
+    "            deliveries = over.get('deliveries', [])  # Ensure deliveries is a list\n",
+    "            \n",
+    "            for delivery in deliveries:\n",
+    "                batter = delivery.get('batter')\n",
+    "                runs = delivery.get('runs', {}).get('batter', 0)\n",
+    "                bowler = delivery.get('bowler')\n",
+    "                non_striker = delivery.get('non_striker')\n",
+    "                \n",
+    "                # Initialize stats for the team if not already present\n",
+    "                if team not in player_stats:\n",
+    "                    player_stats[team] = {}\n",
+    "                \n",
+    "                # Initialize stats for the batter within the correct team\n",
+    "                if batter not in player_stats[team]:\n",
+    "                    player_stats[team][batter] = {\n",
+    "                        'total_runs': 0,\n",
+    "                        'wicket': None  # Singular as it's one dismissal\n",
+    "                    }\n",
+    "\n",
+    "                # Update batter's total runs\n",
+    "                player_stats[team][batter]['total_runs'] += runs\n",
+    "                \n",
+    "                # Check if batter got out on this delivery\n",
+    "                if \"wicket\" in delivery:\n",
+    "                    dismissal_info = delivery.get(\"wicket\", {})\n",
+    "                    dismissal_type = dismissal_info.get(\"kind\")\n",
+    "                    fielders = dismissal_info.get('fielders', [])\n",
+    "                    \n",
+    "                    player_stats[team][batter][\"wicket\"] = {\n",
+    "                        \"over\": over_number,\n",
+    "                        \"bowler\": bowler,\n",
+    "                        \"dismissal_type\": dismissal_type,\n",
+    "                        \"fielders\": fielders\n",
+    "                    }\n",
+    "    \n",
+    "    return player_stats\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +103,10 @@
     "    # Get the team which is chasing\n",
     "    if toss_decision == \"field\":\n",
     "        chasing_team = toss_winner\n",
+    "        target_team = toss_loser\n",
     "    else:\n",
     "        chasing_team = toss_loser\n",
+    "        target_team = toss_winner\n",
     "\n",
     "    target_runs = None\n",
     "\n",
@@ -61,8 +119,21 @@
     "        \n",
     "        \n",
     "    # get first 2 strikers from each team \n",
+    "    players = match_info.get('players')\n",
+    "    \n",
+    "    #For chasing team\n",
+    "    chasing_striker = players.get(chasing_team, [None,None])[0]\n",
+    "    chasing_non_striker = players.get(chasing_team,[None,None])[1]\n",
+    "    \n",
+    "    #For team setting the target \n",
+    "    target_striker = players.get(target_team,[None,None])[0]\n",
+    "    target_non_striker = players.get(target_team,[None,None])[1]\n",
+    "    \n",
     "    # return over they got out in and number of runs each / highest partnership\n",
-    "\n",
+    "    #find when partnership ends based upon when the striker gets out\n",
+    "    \n",
+    "        \n",
+    "        \n",
     "    #access the team list - get first two names - trace that down to innings - loop through overs until name for striker and or non-striker changes\n",
     "    # get the over number , combined runs\n",
     "    # subtract that from total runs to see their impact [if losing opening batsmen has impact on team performance]\n",
@@ -72,6 +143,9 @@
     "    \n",
     "    #if the same bowlers are reintroduced later on - impact on team or constantly changin bowlers \n",
     "    \n",
+    "    #look at player of the match \n",
+    "    \n",
+    "    #check how players are most likely to get out\n",
     "    \n",
     "\n",
     "    return {\n",
@@ -83,13 +157,24 @@
     "        'toss_winner': toss_winner,\n",
     "        'toss_loser': toss_loser,\n",
     "        'toss_decision': toss_decision,\n",
-    "        'target_runs': target_runs\n",
+    "        'target_runs': target_runs,\n",
+    "        'target_striker': target_striker,\n",
+    "        'target_non_striker':target_non_striker,\n",
+    "        'chasing_striker': chasing_striker,\n",
+    "        'chasing_non_striker': chasing_non_striker,\n",
     "}\n",
     "\n",
     "    \n",
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
