--- a/cricket.ipynb
+++ b/cricket.ipynb
@@ -123,7 +123,7 @@
     "    # get first 2 strikers from each team \n",
     "    players = match_info.get('players')\n",
     "    \n",
-    "    #For chasing team\n",
+    "    #For chasing teams\n",
     "    chasing_striker = players.get(chasing_team, [None,None])[0]\n",
     "    chasing_non_striker = players.get(chasing_team,[None,None])[1]\n",
     "    \n",
